# dad-jokes-mcp

./: Dockerfile  README.md  pyproject.toml  run_server.sh  server.py  smithery.yaml  test_server.py
src/dad_jokes_mcp/: server.py
