[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project]
name = "dad_jokes_mcp"
version = "0.1.0"
description = "A lightweight MCP server for dad jokes from icanhazdadjoke.com"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.15.0",
    "smithery>=0.4.2",
    "httpx>=0.27.0",
]

[project.scripts]
dev = "smithery.cli.dev:main"
playground = "smithery.cli.playground:main"

[tool.smithery] 
server = "dad_jokes_mcp.server:create_server"
